--- a/app/Resources/translations/messages.ru.xlf
+++ b/app/Resources/translations/messages.ru.xlf
@@ -11,6 +11,10 @@
                 <source>menu.choose_language</source>
                 <target>Выбрать язык</target>
             </trans-unit>
+            <trans-unit id="menu.search">
+                <source>menu.search</source>
+                <target>Поиск</target>
+            </trans-unit>
 
             <!-- titles -->
             <trans-unit id="title.login">
@@ -62,6 +66,10 @@
             <trans-unit id="post.commented_on">
                 <source>post.commented_on</source>
                 <target>прокомментировано</target>
+            </trans-unit>
+            <trans-unit id="post.search_for">
+                <source>post.search_for</source>
+                <target>Искать запись...</target>
             </trans-unit>
         </body>
     </file>
