--- a/app/Resources/translations/messages.ru.xlf
+++ b/app/Resources/translations/messages.ru.xlf
@@ -19,6 +19,22 @@
                 <source>menu.logout</source>
                 <target>Выйти</target>
             </trans-unit>
+            <trans-unit id="menu.admin">
+                <source>menu.admin</source>
+                <target>Панель управления</target>
+            </trans-unit>
+            <trans-unit id="menu.back_to_blog">
+                <source>menu.back_to_blog</source>
+                <target>Назад к блогу</target>
+            </trans-unit>
+            <trans-unit id="menu.homepage">
+                <source>menu.homepage</source>
+                <target>Главная страница</target>
+            </trans-unit>
+            <trans-unit id="menu.post_list">
+                <source>menu.post_list</source>
+                <target>Список записей</target>
+            </trans-unit>
 
             <!-- titles -->
             <trans-unit id="title.login">
@@ -32,6 +48,18 @@
             <trans-unit id="title.comment_error">
                 <source>title.comment_error</source>
                 <target>Произошла ошибка во время публикации вашего комментария</target>
+            </trans-unit>
+            <trans-unit id="title.post_list">
+                <source>title.post_list</source>
+                <target>Список записей</target>
+            </trans-unit>
+            <trans-unit id="title.post_new">
+                <source>title.post_new</source>
+                <target>Создание записи</target>
+            </trans-unit>
+            <trans-unit id="title.edit_post">
+                <source>title.edit_post</source>
+                <target>Изменение записи</target>
             </trans-unit>
 
             <!-- labels -->
@@ -47,6 +75,42 @@
                 <source>label.content</source>
                 <target>Содержание</target>
             </trans-unit>
+            <trans-unit id="label.title">
+                <source>label.title</source>
+                <target>Название</target>
+            </trans-unit>
+            <trans-unit id="label.created_at">
+                <source>label.created_at</source>
+                <target>Опубликовано</target>
+            </trans-unit>
+            <trans-unit id="label.actions">
+                <source>label.actions</source>
+                <target>Действия</target>
+            </trans-unit>
+            <trans-unit id="label.summary">
+                <source>label.summary</source>
+                <target>Краткое содержание</target>
+            </trans-unit>
+            <trans-unit id="label.tags">
+                <source>label.tags</source>
+                <target>Теги</target>
+            </trans-unit>
+            <trans-unit id="label.create_post">
+                <source>label.create_post</source>
+                <target>Создать запись</target>
+            </trans-unit>
+            <trans-unit id="label.save_and_create_new">
+                <source>label.save_and_create_new</source>
+                <target>Сохранить и создать новую</target>
+            </trans-unit>
+            <trans-unit id="label.delete_post">
+                <source>label.delete_post</source>
+                <target>Удалить запись</target>
+            </trans-unit>
+            <trans-unit id="label.cancel">
+                <source>label.cancel</source>
+                <target>Отменить</target>
+            </trans-unit>
 
             <!-- actions -->
             <trans-unit id="action.sign_in">
@@ -56,6 +120,46 @@
             <trans-unit id="action.publish_comment">
                 <source>action.publish_comment</source>
                 <target>Опубликовать комментарий</target>
+            </trans-unit>
+            <trans-unit id="action.show">
+                <source>action.show</source>
+                <target>Показать</target>
+            </trans-unit>
+            <trans-unit id="action.edit">
+                <source>action.edit</source>
+                <target>Изменить</target>
+            </trans-unit>
+            <trans-unit id="action.create_post">
+                <source>action.create_post</source>
+                <target>Создать новую запись</target>
+            </trans-unit>
+            <trans-unit id="action.back_to_list">
+                <source>action.back_to_list</source>
+                <target>Назад к списку записей</target>
+            </trans-unit>
+            <trans-unit id="action.edit_contents">
+                <source>action.edit_contents</source>
+                <target>Изменить содержание</target>
+            </trans-unit>
+            <trans-unit id="delete_post_modal.title">
+                <source>delete_post_modal.title</source>
+                <target>Вы уверены, что хотите удалить эту запись?</target>
+            </trans-unit>
+            <trans-unit id="delete_post_modal.body">
+                <source>delete_post_modal.body</source>
+                <target>Это действие не может быть отменено.</target>
+            </trans-unit>
+            <trans-unit id="action.delete_post">
+                <source>action.delete_post</source>
+                <target>Удалить запись</target>
+            </trans-unit>
+            <trans-unit id="action.save">
+                <source>action.save</source>
+                <target>Сохранить изменения</target>
+            </trans-unit>
+            <trans-unit id="action.show_post">
+                <source>action.show_post</source>
+                <target>Показать запись</target>
             </trans-unit>
 
             <!-- posts -->
@@ -74,6 +178,22 @@
             <trans-unit id="post.search_for">
                 <source>post.search_for</source>
                 <target>Искать запись...</target>
+            </trans-unit>
+            <trans-unit id="post.no_posts_found">
+                <source>post.no_posts_found</source>
+                <target>Ни одной записи не найдено.</target>
+            </trans-unit>
+            <trans-unit id="post.created_successfully">
+                <source>post.created_successfully</source>
+                <target>Запись успешно создана!</target>
+            </trans-unit>
+            <trans-unit id="post.updated_successfully">
+                <source>post.updated_successfully</source>
+                <target>Запись успешно обновлена!</target>
+            </trans-unit>
+            <trans-unit id="post.deleted_successfully">
+                <source>post.deleted_successfully</source>
+                <target>Запись успешно удалена!</target>
             </trans-unit>
         </body>
     </file>
